Fixing mobile overflow

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -933,9 +933,12 @@ footer
 		font-size: 1.5rem
 
 	.section .content .features
+		margin: 0 -1rem -1rem -1rem
+
 		.feature
 			width: 100%
-			margin: 1em 0
+			min-width: 0px
+			margin: 0 0 1rem 0
 
 	.connect
 		padding: 1rem
@@ -952,3 +955,4 @@ footer
 
 				.buttons
 					margin-bottom: 3rem
+
